--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -54,6 +54,7 @@ dependencies {
 	implementation("org.springframework.boot:spring-boot-devtools:${springBootVersion}")
 	implementation("org.thymeleaf:thymeleaf:3.0.15.RELEASE")
 	implementation("org.thymeleaf:thymeleaf-spring5:3.0.15.RELEASE")
+	compileOnly 'org.projectlombok:lombok:1.18.24'
 	
 	implementation group: "org.kie", name: "kie-api", version: "7.25.0.Final"
 	implementation group: "org.drools", name: "drools-core", version: "7.25.0.Final"
