--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -46,6 +46,10 @@ dependencies {
 	implementation("org.kie.server:kie-server-client:${droolsVersion}")
 	implementation("org.drools:drools-compiler:${droolsVersion}")
 	
+	//swagger
+	implementation 'io.springfox:springfox-swagger2:2.9.2'
+    implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+	
 	//implementation("org.glassfish.jersey.core:jersey-client:3.1.0")
 	//implementation 'org.kie.server:kie-server-services-common:7.25.0.Final'
     //implementation 'org.kie.server:kie-server-services-drools:7.25.0.Final'
